# BetterDeal

./: README.md  manifest.json  pyproject.toml  requirements.txt  run_analyzer.py  setup.py
src/betterdeal/: analysis_engine.py  loan_calculator.py  rentcast_client.py  server.py
src/rentcast_mcp_server/: analysis_engine.py  loan_calculator.py  rentcast_client.py  server.py  url_parser.py  web_app.py
